@@ -1,5 +1,6 @@
+2025-03-08: [FEATURE] Add ability to switch streams/groups in `SnapCast` widget
 2025-03-07: [RELEASE] v0.31.0 release - compatible with qtile 0.31.0
-2025-03-07: [FEATURE] Add Mpris2 support to `Snapcast` widget
+2025-03-07: [FEATURE] Add Mpris2 support to `SnapCast` widget
 2025-02-22: [FEATURE] Add ability to stroke `PowerLineDecoration` shape 
 2025-01-07: [RELEASE] v0.30.0 release - compatible with qtile 0.30.0
 2025-01-02: [FEATURE] More methods for generating `PopupMenu` objects
